--- a/public/css/extra_style.css
+++ b/public/css/extra_style.css
@@ -15,15 +15,63 @@
     background-color: #2e3192;
 }
 
-.swal-button,.swal-button--confirm {
-    background-color: #228b22;
+.swal-button:focus {
+    outline: none;
+    box-shadow: 0 0 0 0px #fff, 0 0 0 0px rgba(43,114,165,.29);
+}
+.swal-button {
+    background-color: #7cd1f9;
     color: #fff;
     border: none;
     box-shadow: none;
-    border-radius: 5px;
+    border-radius: 0px;
     font-weight: 600;
     font-size: 14px;
     padding: 10px 24px;
     margin: 0;
     cursor: pointer;
+}
+.swal-button.swal-button--confirm {
+    background: transparent;
+    border: 1px solid forestgreen;
+    padding: .5rem 1rem .5rem 1rem;
+    font-size: 14px;
+    transition: all 400ms linear 0s;
+    -webkit-transition: all 400ms linear 0s;
+    color: forestgreen;
+    height: 45px;
+    vertical-align: top;
+}
+.swal-button.swal-button--confirm:hover {
+    background: forestgreen;
+    color: #fff;
+}
+
+.swal-icon.swal-icon--error {
+    border-color: #228b22;
+    -webkit-animation: animateErrorIcon .5s;
+    animation: animateErrorIcon .5s;
+}
+.swal-icon--error__line {
+    position: absolute;
+    height: 5px;
+    width: 47px;
+    background-color: #2e3192;
+    display: block;
+    top: 37px;
+    border-radius: 2px;
+}
+
+
+.swal-title {
+    color: rgb(34, 139, 34);
+    font-weight: 600;
+    text-transform: none;
+    position: relative;
+    display: block;
+    padding: 13px 16px;
+    font-size: 20px;
+    line-height: normal;
+    text-align: center;
+    margin-bottom: 0;
 }
