--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22030,6 +22030,172 @@ a.text-dark:focus {
   display: none !important;
 }
 
+.form-control.focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #a1cbef;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+}
+
+.form-control.focus.is-valid {
+  border-color: #38c172;
+  box-shadow: 0 0 0 0.2rem rgba(56, 193, 114, 0.25);
+}
+
+.form-control.focus.is-invalid {
+  border-color: #e3342f;
+  box-shadow: 0 0 0 0.2rem rgba(227, 52, 47, 0.25);
+}
+
+.b-form-btn-label-control {
+  background-image: none;
+}
+
+[dir=rtl] .b-form-btn-label-control,
+.b-form-btn-label-control[dir=rtl] {
+  flex-direction: row-reverse;
+}
+
+[dir=rtl] .b-form-btn-label-control > label,
+.b-form-btn-label-control[dir=rtl] > label {
+  text-align: right;
+}
+
+.b-form-btn-label-control > .btn {
+  line-height: 1;
+  font-size: inherit;
+  box-shadow: none !important;
+}
+
+.b-form-btn-label-control > .btn:disabled {
+  pointer-events: none;
+}
+
+.b-form-btn-label-control.is-valid > .btn {
+  color: #38c172;
+}
+
+.b-form-btn-label-control.is-invalid > .btn {
+  color: #e3342f;
+}
+
+.b-form-btn-label-control > label {
+  outline: 0;
+  cursor: pointer;
+  min-height: calc(calc(1.6em + 0.75rem + 2px) - 2px);
+}
+
+.b-form-btn-label-control > label.form-control-sm {
+  min-height: calc(calc(1.5em + 0.5rem + 2px) - 2px);
+}
+
+.b-form-btn-label-control > label.form-control-lg {
+  min-height: calc(calc(1.5em + 1rem + 2px) - 2px);
+}
+
+.b-form-btn-label-control[aria-disabled=true],
+.b-form-btn-label-control[aria-readonly=true] {
+  background-color: #e9ecef;
+  opacity: 1;
+}
+
+.b-form-btn-label-control[aria-disabled=true] {
+  pointer-events: none;
+}
+
+.b-form-btn-label-control[aria-disabled=true] > label {
+  cursor: default;
+}
+
+.b-avatar {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  font-weight: 400;
+  line-height: 1;
+  max-width: 100%;
+  max-height: auto;
+  text-align: center;
+  text-transform: uppercase;
+  white-space: nowrap;
+  overflow: hidden;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.b-avatar:focus {
+  outline: 0;
+}
+
+.b-avatara,
+.b-avatarbutton,
+.b-avatar.btn {
+  padding: 0;
+  border: 0;
+}
+
+.b-avatara:not(:disabled):not(.disabled),
+.b-avatarbutton:not(:disabled):not(.disabled),
+.b-avatar.btn:not(:disabled):not(.disabled) {
+  cursor: pointer;
+}
+
+.b-avatar.disabled,
+.b-avatar:disabled,
+.b-avatar[disabled] {
+  opacity: 0.65;
+  pointer-events: none;
+}
+
+.b-avatar > span {
+  border-radius: inherit;
+}
+
+.b-avatar .b-icon {
+  width: 60%;
+  height: auto;
+  max-width: 100%;
+  max-height: auto;
+}
+
+.b-avatar img {
+  width: 90%;
+  height: 90%;
+  max-width: 100%;
+  max-height: auto;
+  border-radius: inherit;
+}
+
+.b-calendar .b-calendar-inner {
+  min-width: 250px;
+}
+
+.b-calendar output.readonly {
+  background-color: #e9ecef;
+  opacity: 1;
+}
+
+.b-calendar .form-control[role=application] {
+  overflow: hidden;
+}
+
+.b-calendar .b-calendar-grid-body .col[data-date] .btn {
+  width: 32px;
+  height: 32px;
+  font-size: 14px;
+  line-height: 1;
+  margin: 3px auto;
+  padding: 9px 0;
+}
+
+.b-calendar .btn:disabled,
+.b-calendar .btn.disabled,
+.b-calendar .btn[aria-disabled=true] {
+  cursor: default;
+  pointer-events: none;
+}
+
 .card-img-left {
   border-top-left-radius: calc(0.25rem - 1px);
   border-bottom-left-radius: calc(0.25rem - 1px);
@@ -22611,6 +22777,63 @@ input[type=color].form-control:disabled {
   background: no-repeat 50%/50% 50%;
 }
 
+.b-form-spinbutton.form-control {
+  text-align: center;
+  overflow: hidden;
+  background-image: none;
+}
+
+.b-form-spinbutton.form-control.flex-column {
+  height: auto;
+  width: auto;
+}
+
+[dir=rtl] .b-form-spinbutton.form-control:not(.flex-column),
+.b-form-spinbutton.form-control[dir=rtl]:not(.flex-column) {
+  flex-direction: row-reverse;
+}
+
+.b-form-spinbutton.form-control output {
+  font-size: inherit;
+  outline: 0;
+  border: 0;
+  background-color: transparent;
+}
+
+.b-form-spinbutton.form-control output > div,
+.b-form-spinbutton.form-control output > bdi {
+  display: block;
+  min-width: 2.25em;
+  height: 1.6em;
+}
+
+.b-form-spinbutton.form-control.d-inline-flex:not(.flex-column),
+.b-form-spinbutton.form-control.d-inline-flex:not(.flex-column) output {
+  width: auto;
+}
+
+.b-form-spinbutton.form-control .btn {
+  line-height: 1;
+  box-shadow: none !important;
+}
+
+.b-form-spinbutton.form-control .btn:disabled {
+  pointer-events: none;
+}
+
+.b-form-spinbutton.form-control .btn:hover:not(:disabled) > div > .b-icon {
+  transform: scale(1.25);
+}
+
+.b-form-spinbutton.form-control.disabled,
+.b-form-spinbutton.form-control.readonly {
+  background-color: #e9ecef;
+}
+
+.b-form-spinbutton.form-control.disabled {
+  pointer-events: none;
+}
+
 .b-form-tags.focus {
   color: #495057;
   background-color: #fff;
@@ -23164,6 +23387,85 @@ input[type=color].form-control:disabled {
 
 .b-popover-dark .popover-body {
   color: #1b1e21;
+}
+
+.b-sidebar {
+  display: flex;
+  flex-direction: column;
+  position: fixed !important;
+  top: 0;
+  bottom: 0;
+  width: 320px;
+  max-width: 100% !important;
+  height: 100vh !important;
+  margin: 0 !important;
+  outline: 0;
+  transform: translateX(0);
+  z-index: calc(1030 + 5);
+}
+
+.b-sidebar.slide {
+  transition: transform 0.3s ease-in-out;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-sidebar.slide {
+    transition: none;
+  }
+}
+
+.b-sidebar:not(.b-sidebar-right) {
+  left: 0;
+  right: auto;
+}
+
+.b-sidebar:not(.b-sidebar-right).slide:not(.show) {
+  transform: translateX(-100%);
+}
+
+.b-sidebar:not(.b-sidebar-right) > .b-sidebar-header .close {
+  margin-left: auto;
+}
+
+.b-sidebar.b-sidebar-right {
+  left: auto;
+  right: 0;
+}
+
+.b-sidebar.b-sidebar-right.slide:not(.show) {
+  transform: translateX(100%);
+}
+
+.b-sidebar.b-sidebar-right > .b-sidebar-header .close {
+  margin-right: auto;
+}
+
+.b-sidebar > .b-sidebar-header {
+  font-size: 1.5rem;
+  padding: 0.5rem 1rem;
+  display: flex;
+  flex-direction: row;
+  flex-grow: 0;
+  align-items: center;
+}
+
+[dir=rtl] .b-sidebar > .b-sidebar-header {
+  flex-direction: row-reverse;
+}
+
+.b-sidebar > .b-sidebar-header .close {
+  float: none;
+  font-size: 1.5rem;
+}
+
+.b-sidebar > .b-sidebar-body {
+  flex-grow: 1;
+  height: 100%;
+  overflow-y: auto;
+}
+
+.b-sidebar > .b-sidebar-footer {
+  flex-grow: 0;
 }
 
 .table.b-table.b-table-fixed {
@@ -23754,6 +24056,25 @@ input[type=color].form-control:disabled {
   border-top-width: 3px;
 }
 
+.b-time {
+  min-width: 150px;
+}
+
+.b-time[aria-disabled=true] output,
+.b-time[aria-readonly=true] output,
+.b-time output.disabled {
+  background-color: #e9ecef;
+  opacity: 1;
+}
+
+.b-time[aria-disabled=true] output {
+  pointer-events: none;
+}
+
+[dir=rtl] .b-time > .d-flex:not(.flex-column) {
+  flex-direction: row-reverse;
+}
+
 .b-toast {
   display: block;
   position: relative;
@@ -23958,7 +24279,7 @@ input[type=color].form-control:disabled {
   position: absolute;
   max-width: 350px;
   width: 100%;
-  /* IE11 fix */
+  /* IE 11 fix */
   left: 0;
   right: 0;
   padding: 0;
@@ -24078,6 +24399,17 @@ input[type=color].form-control:disabled {
 
 .tooltip.b-tooltip.noninteractive {
   pointer-events: none;
+}
+
+.tooltip.b-tooltip .arrow {
+  margin: 0 0.25rem;
+}
+
+.tooltip.b-tooltip.bs-tooltip-right .arrow,
+.tooltip.b-tooltip.bs-tooltip-auto[x-placement^=right] .arrow,
+.tooltip.b-tooltip.bs-tooltip-left .arrow,
+.tooltip.b-tooltip.bs-tooltip-auto[x-placement^=left] .arrow {
+  margin: 0.25rem 0;
 }
 
 .tooltip.b-tooltip-primary.bs-tooltip-top .arrow::before,
@@ -24284,6 +24616,154 @@ input[type=color].form-control:disabled {
   display: inline-block;
   overflow: visible;
   vertical-align: -0.15em;
+}
+
+.b-icon.b-icon-animation-spin,
+.b-icon.b-iconstack .b-icon-animation-spin > g {
+  transform-origin: center;
+  -webkit-animation: 2s infinite linear normal b-icon-animation-spin;
+          animation: 2s infinite linear normal b-icon-animation-spin;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-icon.b-icon-animation-spin,
+  .b-icon.b-iconstack .b-icon-animation-spin > g {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+.b-icon.b-icon-animation-spin-reverse,
+.b-icon.b-iconstack .b-icon-animation-spin-reverse > g {
+  transform-origin: center;
+  animation: 2s infinite linear reverse b-icon-animation-spin;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-icon.b-icon-animation-spin-reverse,
+  .b-icon.b-iconstack .b-icon-animation-spin-reverse > g {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+.b-icon.b-icon-animation-spin-pulse,
+.b-icon.b-iconstack .b-icon-animation-spin-pulse > g {
+  transform-origin: center;
+  -webkit-animation: 1s infinite steps(8) normal b-icon-animation-spin;
+          animation: 1s infinite steps(8) normal b-icon-animation-spin;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-icon.b-icon-animation-spin-pulse,
+  .b-icon.b-iconstack .b-icon-animation-spin-pulse > g {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+.b-icon.b-icon-animation-spin-reverse-pulse,
+.b-icon.b-iconstack .b-icon-animation-spin-reverse-pulse > g {
+  transform-origin: center;
+  animation: 1s infinite steps(8) reverse b-icon-animation-spin;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-icon.b-icon-animation-spin-reverse-pulse,
+  .b-icon.b-iconstack .b-icon-animation-spin-reverse-pulse > g {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+.b-icon.b-icon-animation-cylon,
+.b-icon.b-iconstack .b-icon-animation-cylon > g {
+  transform-origin: center;
+  -webkit-animation: 0.75s infinite ease-in-out alternate b-icon-animation-cylon;
+          animation: 0.75s infinite ease-in-out alternate b-icon-animation-cylon;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-icon.b-icon-animation-cylon,
+  .b-icon.b-iconstack .b-icon-animation-cylon > g {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+.b-icon.b-icon-animation-cylon-vertical,
+.b-icon.b-iconstack .b-icon-animation-cylon-vertical > g {
+  transform-origin: center;
+  -webkit-animation: 0.75s infinite ease-in-out alternate b-icon-animation-cylon-vertical;
+          animation: 0.75s infinite ease-in-out alternate b-icon-animation-cylon-vertical;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .b-icon.b-icon-animation-cylon-vertical,
+  .b-icon.b-iconstack .b-icon-animation-cylon-vertical > g {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+
+@-webkit-keyframes b-icon-animation-spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(359deg);
+  }
+}
+
+@keyframes b-icon-animation-spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(359deg);
+  }
+}
+
+@-webkit-keyframes b-icon-animation-cylon {
+  0% {
+    transform: translateX(-25%);
+  }
+
+  100% {
+    transform: translateX(25%);
+  }
+}
+
+@keyframes b-icon-animation-cylon {
+  0% {
+    transform: translateX(-25%);
+  }
+
+  100% {
+    transform: translateX(25%);
+  }
+}
+
+@-webkit-keyframes b-icon-animation-cylon-vertical {
+  0% {
+    transform: translateY(25%);
+  }
+
+  100% {
+    transform: translateY(-25%);
+  }
+}
+
+@keyframes b-icon-animation-cylon-vertical {
+  0% {
+    transform: translateY(25%);
+  }
+
+  100% {
+    transform: translateY(-25%);
+  }
 }
 
 .btn .b-icon.bi,
